setup for multiple deployment

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 	<head>
 	</head>
 	<body>
-		<form method="post" enctype="application/x-www-form-urlencoded" action="/get">
+		<form method="post" enctype="application/x-www-form-urlencoded" action="/spass/get">
             <h2>Get Password</h2>
 			<div>
 				<label for="master">Master password:</label>
@@ -17,7 +17,7 @@
 				<button type="submit">go</button>
 			</div>
 		</form>
-		<form method="post" enctype="application/x-www-form-urlencoded" action="/ls">
+		<form method="post" enctype="application/x-www-form-urlencoded" action="/spass/ls">
             <h2>List All Passwords</h2>
 			<div>
 				<label for="master">Master password:</label>
@@ -27,7 +27,7 @@
 				<button type="submit">go</button>
 			</div>
 		</form>
-		<form method="post" enctype="application/x-www-form-urlencoded" action="/gen">
+		<form method="post" enctype="application/x-www-form-urlencoded" action="/spass/gen">
             <h2>Generate Password</h2>
 			<div>
 				<label for="master">Master password:</label>
@@ -61,7 +61,7 @@
 				<button type="submit">go</button>
 			</div>
 		</form>
-		<form method="post" enctype="application/x-www-form-urlencoded" action="/add">
+		<form method="post" enctype="application/x-www-form-urlencoded" action="/spass/add">
             <h2>Add Password</h2>
 			<div>
 				<label for="master">Master password:</label>
@@ -83,7 +83,7 @@
 				<button type="submit">go</button>
 			</div>
 		</form>
-		<form method="post" enctype="application/x-www-form-urlencoded" action="/rm">
+		<form method="post" enctype="application/x-www-form-urlencoded" action="/spass/rm">
             <h2>Remove Password</h2>
 			<div>
 				<label for="master">Master password:</label>
@@ -97,7 +97,7 @@
 				<button type="submit">go</button>
 			</div>
 		</form>
-		<form method="post" enctype="application/x-www-form-urlencoded" action="/chpw">
+		<form method="post" enctype="application/x-www-form-urlencoded" action="/spass/chpw">
             <h2>Change master password</h2>
 			<div>
 				<label for="master">Master password:</label>
